; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/nvme/extr_nvme_qpair.c_get_io_opcode_string.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/nvme/extr_nvme_qpair.c_get_io_opcode_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvme_opcode_string = type { i32, i8* }

@io_opcode = common dso_local global %struct.nvme_opcode_string* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @get_io_opcode_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_io_opcode_string(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.nvme_opcode_string*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load %struct.nvme_opcode_string*, %struct.nvme_opcode_string** @io_opcode, align 8
  store %struct.nvme_opcode_string* %5, %struct.nvme_opcode_string** %4, align 8
  br label %6

6:                                                ; preds = %21, %1
  %7 = load %struct.nvme_opcode_string*, %struct.nvme_opcode_string** %4, align 8
  %8 = getelementptr inbounds %struct.nvme_opcode_string, %struct.nvme_opcode_string* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = icmp ne i32 %9, 65535
  br i1 %10, label %11, label %24

11:                                               ; preds = %6
  %12 = load %struct.nvme_opcode_string*, %struct.nvme_opcode_string** %4, align 8
  %13 = getelementptr inbounds %struct.nvme_opcode_string, %struct.nvme_opcode_string* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = load i32, i32* %3, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %11
  %18 = load %struct.nvme_opcode_string*, %struct.nvme_opcode_string** %4, align 8
  %19 = getelementptr inbounds %struct.nvme_opcode_string, %struct.nvme_opcode_string* %18, i32 0, i32 1
  %20 = load i8*, i8** %19, align 8
  store i8* %20, i8** %2, align 8
  br label %28

21:                                               ; preds = %11
  %22 = load %struct.nvme_opcode_string*, %struct.nvme_opcode_string** %4, align 8
  %23 = getelementptr inbounds %struct.nvme_opcode_string, %struct.nvme_opcode_string* %22, i32 1
  store %struct.nvme_opcode_string* %23, %struct.nvme_opcode_string** %4, align 8
  br label %6

24:                                               ; preds = %6
  %25 = load %struct.nvme_opcode_string*, %struct.nvme_opcode_string** %4, align 8
  %26 = getelementptr inbounds %struct.nvme_opcode_string, %struct.nvme_opcode_string* %25, i32 0, i32 1
  %27 = load i8*, i8** %26, align 8
  store i8* %27, i8** %2, align 8
  br label %28

28:                                               ; preds = %24, %17
  %29 = load i8*, i8** %2, align 8
  ret i8* %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
